--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 							<li class="active"><a href="index.html">My Portfolio</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#https://www.linkedin.com/in/sean-desire-222798219/" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/sean-desire-222798219/" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
+							<li><a href="" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -69,7 +69,7 @@
 									<a href="#" class="image fit"><img src="https://user-images.githubusercontent.com/88795800/139605866-d0c85855-720e-49fa-9428-f4a8fd5bdf01.png" alt="" /></a>
 									<p>An application called Note Taker that can be used to write and save notes. This application uses an Express.js back end and will save and retrieve note data from a JSON file..</p>
 									<ul class="actions special">
-										<li><a href="#https://github.com/sdesire/Employee-Tracker" class="button">Code</a></li>
+										<li><a href="https://haunted-cheateau-96219.herokuapp.com/" class="button">Code</a></li>
 									</ul>
 								</article>
 								<article>
@@ -81,7 +81,7 @@
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>An React app that allows you to experience different cuisine from a variety of cultures.</p>
 									<ul class="actions special">
-										<li><a href="#https://github.com/JulioRios15/Cultural-Eats" class="button">Code</a></li>
+										<li><a href="https://github.com/JulioRios15/Cultural-Eats" class="button">Code</a></li>
 									</ul>
 								</article>
 								<article>
@@ -92,7 +92,7 @@
 									<a href="#" class="image fit"><img src="https://user-images.githubusercontent.com/88795800/151582138-7820eca4-d637-43ea-b729-f44eeafd383d.png" alt="" /></a>
 									<p>An A app created to help the user plan which breweries to get the finest beers wherever they travel to, including a weather forecast with just the click of a button.</p>
 									<ul class="actions special">
-										<li><a href="#https://github.com/sdesire/APIs-For-IPAs" class="button">Code</a></li>
+										<li><a href="https://github.com/sdesire/APIs-For-IPAs" class="button">Code</a></li>
 									</ul>
 								</article>
 								
@@ -119,8 +119,8 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 
-									<li><a href="#https://www.linkedin.com/in/sean-desire-222798219/" class="icon brands alt fa-linkedin"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/sean-desire-222798219/" class="icon brands alt fa-linkedin"><span class="label">Instagram</span></a></li>
+									<li><a href="" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
