--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<a href="#" class="image fit"><img src="https://user-images.githubusercontent.com/88795800/139605866-d0c85855-720e-49fa-9428-f4a8fd5bdf01.png" alt="" /></a>
 									<p>An application called Note Taker that can be used to write and save notes. This application uses an Express.js back end and will save and retrieve note data from a JSON file..</p>
 									<ul class="actions special">
-										<li><a href="https://haunted-cheateau-96219.herokuapp.com/" class="button">Code</a></li>
+										<li><a href="https://github.com/sdesire/Express.js-Challenge" class="button">Code</a></li>
 									</ul>
 								</article>
 								<article>
