--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">Sean Desire</a></h2>
+									<h2><a href="#">Sean Alain Desire</a></h2>
 									<p>Up and coming Full-Stack Developer passionate about technology.</p>
 								</header>
 								<a href="#" class="image main"><img src="https://media.istockphoto.com/photos/computer-programmer-working-on-laptop-picture-id1265176772?b=1&k=20&m=1265176772&s=170667a&w=0&h=IHFnvxa3kvVTuZcEfPpCSGIFA_gNT7dIlGDR7eD2cFI=" alt="" /></a>
@@ -90,7 +90,7 @@
 										APIs for IPAs</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://user-images.githubusercontent.com/88795800/151582138-7820eca4-d637-43ea-b729-f44eeafd383d.png" alt="" /></a>
-									<p>An A app created to help the user plan which breweries to get the finest beers wherever they travel to, including a weather forecast with just the click of a button.</p>
+									<p>An app created to help the user plan which breweries to get the finest beers wherever they travel to, including a weather forecast with just the click of a button.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/sdesire/APIs-For-IPAs" class="button">Code</a></li>
 									</ul>
