--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<header>
 										
 										<h2><a href="#">Project 2<br />
-										Cultural Eats</a></h2>
+										Cultural Eats(Unfinished)</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>An React app that allows you to experience different cuisine from a variety of cultures.</p>
