--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										<h2><a href="#">Project 2<br />
 										Cultural Eats</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="https://user-images.githubusercontent.com/88795800/152446519-12d46a7f-c9b5-4a68-8747-3c92014258ac.png" alt="" /></a>
 									<p>An React app that allows you to experience different cuisine from a variety of cultures.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/JulioRios15/Cultural-Eats" class="button">Code</a></li>
